[package]
name = "tft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.4"
ureq = "2.6.2"
iced = { git = "https://github.com/iced-rs/iced.git", features = ["lazy", "image"] }
env_logger = "0.10.0"
directories = "5.0.1"
image = { version = "0.24.6", default-features = false, features = ["png"] }
itertools = "0.10.5"
