[package]
name = "tft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.6"
iced = { git = "https://github.com/iced-rs/iced.git", features = ["image"] }
env_logger = "0.10"
directories = "5.0"
image = { version = "0.24", default-features = false, features = ["png"] }
itertools = "0.10"
